@@ -90,34 +90,6 @@
 
     <build>
         <plugins>
-            <!-- Delombok -->
-           <plugin>
-               <groupId>org.projectlombok</groupId>
-               <artifactId>lombok-maven-plugin</artifactId>
-               <version>${delombok-version}</version>
-               <dependencies>
-                   <dependency>
-                       <groupId>org.projectlombok</groupId>
-                       <artifactId>lombok</artifactId>
-                       <version>${lombok-version}</version>
-                   </dependency>
-               </dependencies>
-               <configuration>
-                   <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
-                   <outputDirectory>${delombok.output}</outputDirectory>
-                   <addOutputDirectory>false</addOutputDirectory>
-                   <encoding>${project.build.sourceEncoding}</encoding>
-               </configuration>
-               <executions>
-                   <execution>
-                       <phase>prepare-package</phase>
-                       <goals>
-                           <goal>delombok</goal>
-                       </goals>
-                   </execution>
-               </executions>
-           </plugin>
-
            <!-- Compile -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -129,14 +101,21 @@
                     <release>${java-version}</release>
                     <annotationProcessorPaths>
                         <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>1.4.2.Final</version>
+                        </path>
+                        <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>${lombok-version}</version>
+                            <version>1.18.20</version>
                         </path>
                     </annotationProcessorPaths>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                    <annotationProcessors>
+                        <annotationProcessor>org.mapstruct.ap.MappingProcessor</annotationProcessor>
+                    </annotationProcessors>
+                    <!-- Enable lombok compilation access to com.sun, and access to mapstruct to build-->
+                    <compilerArgs>--illegal-access=permit</compilerArgs>
                     <failOnError>true</failOnError>
                 </configuration>
             </plugin>
